--- a/mysite/homepage/static/homepage/homepage_style.css
+++ b/mysite/homepage/static/homepage/homepage_style.css
@@ -1,17 +1,18 @@
 li a {
-    color: green;
-  }
-  
-  body {
-    background: white url("https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg") no-repeat;
-    background-position: center;
-  }
-  
-  /* body {
+  color: green;
+}
+
+body {
+  background: white
+    url("https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg")
+    no-repeat;
+  background-position: center;
+}
+
+/* body {
     background: url("images/baby1.jpg"), url("images/baby2.jpg"),
       url("images/baby3.jpg");
     background-position: center top, right top, center left;
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-size: 400px 400px, 400px 400px, 400px 400px;
   } */
-  
