--- a/mysite/homepage/static/homepage/homepage_style.css
+++ b/mysite/homepage/static/homepage/homepage_style.css
@@ -1,13 +1,17 @@
 li a {
-  color: green;
+  color: white;
 }
 
 body {
-  background: white
+  /*colour of text*/
+  color: white;
+  /* colour of image */
+  background: black
     url("https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg")
     no-repeat;
   background-position: center;
 }
+
 
 /* body {
     background: url("images/baby1.jpg"), url("images/baby2.jpg"),
