--- a/mysite/homepage/static/homepage/homepage_style.css
+++ b/mysite/homepage/static/homepage/homepage_style.css
@@ -1,17 +1,34 @@
-li a {
-  color: white;
+.topnav {
+  background-color: yellow;
+  overflow: hidden;
 }
+
+.topnav welcome {
+  float: left;
+  color: aqua;
+  text-align: center;
+  width: fit-content;
+}
+
+.topnav login {
+  float: right;
+  color: red;
+  text-align: center;
+}
+
+/* li a {
+  color: white;
+} */
 
 body {
   /*colour of text*/
-  color: white;
+  /* color: white; */
   /* colour of image */
-  background: black
+  background: white
     url("https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg")
     no-repeat;
   background-position: center;
 }
-
 
 /* body {
     background: url("images/baby1.jpg"), url("images/baby2.jpg"),
