trying to add top bar and link to login page improved

--- a/mysite/homepage/templates/homepage/homepage.html
+++ b/mysite/homepage/templates/homepage/homepage.html
@@ -9,5 +9,5 @@
     <title class="welcome">Welcome Page</title>
     Hello World!
   </a>
-  <a class="login" href="/mysite/users/templates/users/loginpage.html">Login</a>
+  <a class="login" href="/login/">Login Page</a>
 </head>
