--- a/mysite/homepage/templates/homepage/homepage.html
+++ b/mysite/homepage/templates/homepage/homepage.html
@@ -1,13 +1,19 @@
 {% load static %}
 
-<div>
+<html>
   <link rel="stylesheet" href="{% static 'homepage/homepage_style.css' %}" />
-</div>
 
-<head>
-  <a class="topnav">
-    <title class="welcome">Welcome Page</title>
-    Hello World!
-  </a>
-  <a class="login" href="/login/">Login Page</a>
-</head>
+  <head>
+    <title>Test.com | Welcome Page</title>
+    <h1 class="welcome">Hello World!</h1>
+    <a class="login" href="/login/">Login Page</a>
+  </head>
+
+  <body>
+    <img
+      class="'eiffel"
+      src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
+      alt="Image not found"
+    />
+  </body>
+</html>
