--- a/mysite/homepage/static/homepage/homepage_style.css
+++ b/mysite/homepage/static/homepage/homepage_style.css
@@ -1,3 +1,8 @@
+.topbar {
+  box-sizing: border-box;
+  height: 56px;
+}
+
 .welcome {
   float: left;
   display: block;
@@ -8,6 +13,7 @@
 
 .login {
   float: right;
+  display: block;
   color: red;
   text-align: center;
 }
@@ -18,9 +24,9 @@
 
 body {
   background: darkblue;
-  .eiffel {
+  /*   .eiffel {
     background-position: center;
-  }
+  } */
   /* background-position: center bottom; */
 }
 
