--- a/mysite/homepage/templates/homepage/homepage.html
+++ b/mysite/homepage/templates/homepage/homepage.html
@@ -4,16 +4,22 @@
   <link rel="stylesheet" href="{% static 'homepage/homepage_style.css' %}" />
 
   <head>
-    <title>Test.com | Welcome Page</title>
-    <h1 class="welcome">Hello World!</h1>
-    <a class="login" href="/login/">Login Page</a>
+    <div class="topbar">
+      <title>Test.com | Welcome Page</title>
+      <h1 class="welcome">Hello World!</h1>
+      <a class="login" href="/login">Login Page</a>
+    </div>
   </head>
 
   <body>
-    <img
-      class="'eiffel"
-      src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
-      alt="Image not found"
-    />
+    <div>
+      <div>
+        <img
+          class="'eiffel"
+          src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
+          alt="Image not found"
+        />
+      </div>
+    </div>
   </body>
 </html>
