--- a/mysite/homepage/templates/homepage/homepage.html
+++ b/mysite/homepage/templates/homepage/homepage.html
@@ -2,12 +2,12 @@
 
 <html>
   <link rel="stylesheet" href="{% static 'homepage/homepage_style.css' %}" />
-
   <head>
     <div class="topbar">
       <title>Test.com | Welcome Page</title>
       <h1 class="welcome">Hello World!</h1>
       <a class="login" href="/login">Login Page</a>
+      <script src="scripts/welcome.js"></script>
     </div>
   </head>
 
