--- a/mysite/homepage/static/homepage/homepage_style.css
+++ b/mysite/homepage/static/homepage/homepage_style.css
@@ -9,6 +9,8 @@
   color: lightsteelblue;
   text-align: center;
   width: fit-content;
+  margin-left: 50px;
+  margin-bottom: 0px;
 }
 
 .login {
@@ -16,24 +18,18 @@
   display: block;
   color: red;
   text-align: center;
+  margin-right: 2%;
 }
 
-/* li a {
-  color: white;
-} */
-
+html,
 body {
-  background: darkblue;
-  /*   .eiffel {
-    background-position: center;
-  } */
-  /* background-position: center bottom; */
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-/* body {
-    background: url("images/baby1.jpg"), url("images/baby2.jpg"),
-      url("images/baby3.jpg");
-    background-position: center top, right top, center left;
-    background-repeat: no-repeat, no-repeat, no-repeat;
-    background-size: 400px 400px, 400px 400px, 400px 400px;
-  } */
+.centered-images {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+}
