--- a/mysite/homepage/templates/homepage/homepage.html
+++ b/mysite/homepage/templates/homepage/homepage.html
@@ -7,19 +7,16 @@
       <title>Test.com | Welcome Page</title>
       <h1 class="welcome">Hello World!</h1>
       <a class="login" href="/login">Login Page</a>
-      <script src="scripts/welcome.js"></script>
+      <script src="{% static 'jsscripts/welcome.js' %}"></script>
     </div>
   </head>
 
-  <body>
-    <div>
-      <div>
-        <img
-          class="'eiffel"
-          src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
-          alt="Image not found"
-        />
-      </div>
+  <body style="background-color: darkblue">
+    <div class="centered-images">
+      <img
+        src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
+        alt="Image not found"
+      />
     </div>
   </body>
 </html>
