resolved base.html url routing issue

--- a/mysite/templates/homepage/homepage.html
+++ b/mysite/templates/homepage/homepage.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{% static 'homepage/css/homepage.css'%}" />
   </head>
   <body>
-    <a href="{% url 'registration:signup_view' %}">
+    <a href="{% url 'register:register_page' %}">
       <button class="signupbutton" type="button">Sign up here!</button>
     </a>
     <h1 class="toppage">Welcome to Django level 2</h1>
