--- a/mysite/templates/register/base.html
+++ b/mysite/templates/register/base.html
@@ -14,13 +14,13 @@
       <div class="container">
         <ul class="nav navbar-nav">
           <li>
-            <a class="navbar-brand" href="{%url 'homepage:homepage'%}"
+            <a class="navbar-brand" href="{%url 'homepage_helloworld'%}"
               >Kenny's Website</a
             >
           </li>
           <li><a class="navbar-link" href="{%url 'admin:index'%}">Admin</a></li>
           <li>
-            <a class="navbar-link" href="{% url 'register:registration'%}"
+            <a class="navbar-link" href="{% url 'register:register_page'%}"
               >Register</a
             >
           </li>
