--- a/mysite/templates/register/register_page.html
+++ b/mysite/templates/register/register_page.html
@@ -1,3 +1,7 @@
+<head>
+  <title>Register page | Kenny's Website</title>
+</head>
+
 {% extends "register/base.html"%} {% load static %} {% block body_block %}
 
 <div class="jumbotron">
